src/usecase/tui/snapshots/fzf_make__usecase__tui__scenario_test__make_selection_reset_by_backspace.snap
---
source: src/usecase/tui/scenario_test.rs
expression: screen
---
"┏ ✨ Preview ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓" Hidden by multi-width symbols: [(3, " ")]
"┃    3     echo "run"                                                                                                  ┃"
"┃    4                                                                                                                 ┃"
"┃    5 .PHONY: run-with-args                                                                                           ┃"
"┃    6 run-with-args:                                                                                                  ┃"
"┃    7     echo $(ARG1); echo $(ARG2)                                                                                  ┃"
"┃    8                                                                                                                 ┃"
"┃    9 .PHONY: run-with-arg                                                                                            ┃"
"┃   10 run-with-arg:                                                                                                   ┃"
"┃   11     echo $(ARG1)                                                                                                ┃"
"┃   12                                                                                                                 ┃"
"┃   13 include ./makefiles/test.mk                                                                                     ┃"
"┃   14                                                                                                                 ┃"
"┃   15 .PHONY: cmd                                                                                                     ┃"
"┃   16 cmd:                                                                                                            ┃"
"┃   17     @read -p "Do something? y/n:" ans; \                                                                        ┃"
"┃   18     if [ "$$ans" = y ]; then  \                                                                                 ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┏ 📢 Commands ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ 📚 History ──────────────────────────────────────────────┐" Hidden by multi-width symbols: [(3, " "), (63, " ")]
"┃  > make run-with-arg                                     ┃│                                                          │"
"┃    make run-with-args                                    ┃│                                                          │"
"┃    make run                                              ┃│                                                          │"
"┃    make target-included                                  ┃│                                                          │"
"┃                                                          ┃│                                                          │"
"┃                                                          ┃│                                                          │"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────────────────────────┘"
"┏ 🔍 Search ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓                                                            " Hidden by multi-width symbols: [(3, " ")]
"┃  ru                                                      ┃                                                            "
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛ vX.Y.Z "
"  Execute the selected command: <enter> | Select command: ↑(<c-p>)/↓(<c-n>) | Narrow down command: (type any            "
